--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ INFURA_ID = bd80ce1ca1f94da48e151bb6868bb150
 NETWORK_ID = 1
 NETWORK = mainnet
 PUBLIC_URL = ''
+NOTIFY_ID = ee4723c6-8a85-4ec1-a73e-cfaec9e37769
