--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
     "bignumber.js": "^9.0.0",
+    "bnc-notify": "^1.4.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
