--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "element-resize-detector": "^1.2.1",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -98,6 +99,7 @@
     "react-image-gallery": "^1.0.8",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.27.12",
     "react-web3": "^1.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
