--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@walletconnect/web3-provider": "^1.3.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.2.6",
