--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "type": "module",
   "dependencies": {
     "@download/blockies": "^1.0.3",
+    "@ethersproject/solidity": "^5.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@walletconnect/web3-provider": "^1.3.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@walletconnect/web3-provider": "^1.3.1",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "classnames": "^2.2.6",
