--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "use-deep-compare-effect": "^1.6.1",
     "web3": "1.2.11",
     "web3modal": "^1.9.1"
   },
