--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn validate && react-scripts build",
     "validate": "node ./scripts/validatePools.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
