--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "build": "yarn validate && react-scripts build",
     "validate": "node ./scripts/validatePools.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -66,5 +67,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0"
+  },
+  "lint-staged": {
+    "*.js": "prettier --write",
+    "*.json": "prettier --write"
   }
 }
