--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.0",
     "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
     "react-i18next": "^11.7.3",
     "react-infinite-scroll-component": "^6.0.0",
