--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@ethersproject/address": "^5.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0"
