--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "start": "react-scripts start",
     "build": "yarn validate && react-scripts build",
     "validate": "node ./scripts/validatePools.js",
+    "launchpool": "node ./scripts/launchpool.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
