--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "launchpool": "node ./scripts/launchpool.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -75,7 +76,8 @@
     "@ethersproject/address": "^5.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "source-map-explorer": "^2.5.2"
   },
   "lint-staged": {
     "*.js": "prettier --write",
