--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "i18next": "^19.8.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "notistack": "^1.0.1",
     "react": "^17.0.0",
     "react-content-loader": "^6.0.1",
@@ -43,6 +42,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.43.4",
     "use-deep-compare-effect": "^1.6.1",
     "web3": "1.2.11",
     "web3modal": "^1.9.1"
