--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "blockchain-addressbook": "^0.5.6",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
+    "deficonnect": "^1.1.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eth-multicall": "^1.3.13",
