--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
     "use-deep-compare-effect": "^1.6.1",
+    "walletlink": "^2.3.0",
     "web3": "1.2.11",
     "web3modal": "^1.9.1"
   },
