--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@download/blockies": "^1.0.3",
+    "@davatar/react": "^1.8.1",
+    "@ethersproject/providers": "^5.5.2",
     "@ethersproject/solidity": "^5.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
